add portfolio section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">NIKOLA</a>
+				<a class="navbar-brand" href="index.html">NIKOLA MARGIT</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -64,20 +64,29 @@
 					<h4>I'm a web developer</h4>
 				</div>
 			</div>
-			<! --/row -->
+
 		</div>
 		<!-- /container -->
 	</div>
-	<! --/headerwrap -->
 
-	<section id="about">
+
+	<section>
 		<div class="container">
-			<div class="row">
+			<div class="row" id="about">
 				<h1>About Me</h1>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id incidunt sunt, temporibus veritatis quidem nemo
-					tempore suscipit in dignissimos nobis laudantium eos error accusantium porro aliquam explicabo quis consequatur!</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, at aspernatur illum harum voluptatem nostrum perferendis
+				<p class="col-lg-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id incidunt sunt, temporibus veritatis quidem nemo
+					tempore suscipit in dignissimos nobis laudantium eos error accusantium porro aliquam explicabo quis consequatur!
+					<br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, at aspernatur illum harum voluptatem nostrum perferendis
+					autem voluptates eveniet eum, sint ducimus id vitae. Veniam soluta doloribus adipisci beatae harum!
+					<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id incidunt sunt, temporibus veritatis quidem nemo
+					tempore suscipit in dignissimos nobis laudantium eos error accusantium porro aliquam explicabo quis consequatur!
+					<br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, at aspernatur illum harum voluptatem nostrum perferendis
 					autem voluptates eveniet eum, sint ducimus id vitae. Veniam soluta doloribus adipisci beatae harum!</p>
+
+				<div class="profile-img col-lg-4">
+					<img src="assets/img/nikola.jpg" alt="Nikola Margit photo" class="img-circle">
+				</div>
+
 			</div>
 		</div>
 	</section>
@@ -88,71 +97,70 @@
 				<h1>My Portfolio</h1>
 
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
+					<a href="http://pomodorist.com/" target="blank">
 						<img src="assets/img/portfolio/folio01.png" class="img-responsive">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
+					<a href="https://nikmargit.github.io/drums/" target="blank">
 						<img src="assets/img/portfolio/folio02.png" class="img-responsive">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
+					<a href="https://nikmargit.github.io/budget-planner/" target="blank">
 						<img src="assets/img/portfolio/folio03.png" class="img-responsive">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
+					<a href="https://nikmargit.github.io/password-checker/" target="blank">
 						<img src="assets/img/portfolio/folio04.png" class="img-responsive">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
+					<a href="https://nikmargit.github.io/tictactoe/" target="blank">
 						<img src="assets/img/portfolio/folio05.png" class="img-responsive">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-					<a href="work.html">
-						<img src="assets/img/portfolio/folio06.png" class="img-responsive">
+					<a href="#/">
+						<img src="assets/img/portfolio/folio06.png " class="img-responsive">
 					</a>
 				</div>
 			</div>
-			<! --/row -->
+
 		</div>
 	</section>
-	<! --/container -->
 
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-3">
-					<a href="https://github.com/nikmargit" target="blank">
-						<i class="fa fa-github"></i>
+					<a href="https://github.com/nikmargit " target="blank ">
+						<i class="fa fa-github "></i>
 					</a>
 				</div>
 				<div class="col-lg-3">
-					<a href="#">
-						<i class="fa fa-facebook"></i>
+					<a href="# ">
+						<i class="fa fa-facebook "></i>
 					</a>
 				</div>
 				<div class="col-lg-3">
-					<a href="https://twitter.com/NikolaMargit" target="blank">
-						<i class="fa fa-twitter"></i>
+					<a href="https://twitter.com/NikolaMargit " target="blank ">
+						<i class="fa fa-twitter "></i>
 					</a>
 				</div>
 				<div class="col-lg-3">
-					<a href="https://www.linkedin.com/in/nikolamargit/" target="blank">
-						<i class="fa fa-linkedin"></i>
+					<a href="https://www.linkedin.com/in/nikolamargit/ " target="blank ">
+						<i class="fa fa-linkedin "></i>
 					</a>
 				</div>
 
 			</div>
-			<! --/row -->
+
 		</div>
-		<! --/container -->
+
 	</div>
-	<! --/social -->
+
 
 	<div id="footerwrap">
 		<div class="container">
@@ -163,15 +171,15 @@
 			</div>
 		</div>
 	</div>
-	<! --/footerwrap -->
+
 
 
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js "></script>
+	<script src="assets/js/bootstrap.min.js "></script>
 </body>
 
 </html>
