change portfolio gallery hover efect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Nikola Margit">
 	<link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-	<title>INSTANT - Bootstrap Theme</title>
+	<title>Nikola Margit</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -84,7 +84,7 @@
 					autem voluptates eveniet eum, sint ducimus id vitae. Veniam soluta doloribus adipisci beatae harum!</p>
 
 				<div class="profile-img col-lg-4">
-					<img src="assets/img/nikola.jpg" alt="Nikola Margit photo" class="img-circle">
+					<img src="assets/img/nikola.jpg" alt="Nikola Margit photo" class="img-responsive img-circle">
 				</div>
 
 			</div>
