--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-fixed-top">
 
 	<!-- Static navbar -->
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -70,9 +70,9 @@
 	</div>
 
 
-	<section>
+	<section id="about">
 		<div class="container">
-			<div class="row" id="about">
+			<div class="row">
 				<h1>About Me</h1>
 				<p class="col-lg-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id incidunt sunt, temporibus veritatis quidem nemo
 					tempore suscipit in dignissimos nobis laudantium eos error accusantium porro aliquam explicabo quis consequatur!
@@ -96,32 +96,32 @@
 			<div class="row centered mt mb">
 				<h1>My Portfolio</h1>
 
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="http://pomodorist.com/" target="blank">
 						<img src="assets/img/portfolio/folio01.png" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="https://nikmargit.github.io/drums/" target="blank">
 						<img src="assets/img/portfolio/folio02.png" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="https://nikmargit.github.io/budget-planner/" target="blank">
 						<img src="assets/img/portfolio/folio03.png" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="https://nikmargit.github.io/password-checker/" target="blank">
 						<img src="assets/img/portfolio/folio04.png" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="https://nikmargit.github.io/tictactoe/" target="blank">
 						<img src="assets/img/portfolio/folio05.png" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<div class="col-lg-4 col-md-6 col-sm-12 gallery">
 					<a href="#/">
 						<img src="assets/img/portfolio/folio06.png " class="img-responsive">
 					</a>
@@ -134,22 +134,22 @@
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-3">
+				<div class="col-lg-offset-2 col-lg-2 col-xs-3">
 					<a href="https://github.com/nikmargit " target="blank ">
 						<i class="fa fa-github "></i>
 					</a>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-2 col-xs-3">
 					<a href="# ">
 						<i class="fa fa-facebook "></i>
 					</a>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-2 col-xs-3">
 					<a href="https://twitter.com/NikolaMargit " target="blank ">
 						<i class="fa fa-twitter "></i>
 					</a>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-2 col-xs-3">
 					<a href="https://www.linkedin.com/in/nikolamargit/ " target="blank ">
 						<i class="fa fa-linkedin "></i>
 					</a>
