--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar-fixed-top">
+<body>
 
 	<!-- Static navbar -->
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -32,12 +32,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">NIKOLA MARGIT</a>
+				<a class="navbar-brand" href="index.html">
+					<h1>NIKOLA MARGIT</h1>
+				</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active">
-						<a href="index.html">Home</a>
+						<a href="#headerwrap">Home</a>
 					</li>
 					<li>
 						<a href="#about">About</a>
@@ -52,7 +54,7 @@
 			</div>
 			<!--/.nav-collapse -->
 		</div>
-	</div>
+	</nav>
 
 
 	<div id="headerwrap">
@@ -180,6 +182,7 @@
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js "></script>
 	<script src="assets/js/bootstrap.min.js "></script>
+	<script src="assets/js/custom.js"></script>
 </body>
 
 </html>
