--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="Nikola Margit">
-	<link rel="shortcut icon" href="assets/ico/favicon.ico">
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
 	<title>Nikola Margit</title>
 
